--- a/veebipood/src/App.css
+++ b/veebipood/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
@@ -38,4 +38,18 @@
 
 .linn-aktiivne {
   background-color: lightblue;
+}
+
+table {
+  margin: auto;
+}
+
+th, td {
+  border: 1px solid black;
+}
+
+.tume {
+  background-color: black;
+  color: white;
+  min-height: 100vh;
 }
